--- a/style.css
+++ b/style.css
@@ -3,18 +3,42 @@ body {
     background-image:url(pexels-photo-7234214.jpg);
 }
 
-
-h1 {
-    text-align: center;
-    font-family:Cinzel;
+.typing-demo {
+    margin-left: 100px;
+    width: 29ch;
+    animation: typing 10s steps(22),blink .5s step-end infinite alternate;
+    white-space:nowrap;
+    overflow: hidden;
+    border-right: 5px solid;
+    font-family: Cinzel;
     font-size: 50px;
-    color: darkred;
+    color: rgb(116, 13, 13);
 }
 
+@keyframes typing{
+    from{
+        width:0;
+    }
+}
+
+@keyframes blink {
+    50%{
+        border-color: rgb(10, 10, 10);
+    }
+}
+
+.screen {
+    background-color: #fff;
+    height: 50px;
+    width: 57%;
+    margin: 20px 0;
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.7);
+    margin-left: 240px;
+}
 .seat {
     background-color:rgb(145, 18, 18);
-    height: 20px;
-    width: 20px;
+    height: 22px;
+    width: 22px;
     margin: 3px;
     border-radius: 5px;
     align-items: center;
@@ -38,4 +62,9 @@ h1 {
     justify-content: center;
     margin-top: 10px;
     gap: 10px 60px;
+}
+
+.movie-list {
+    margin: 10px 10px;
+    margin-left: 240px;
 }
