--- a/style.css
+++ b/style.css
@@ -45,7 +45,9 @@ body {
 }
 
 .seat:hover{
-    background: black;
+   /* background: black;*/
+    cursor: pointer;
+    transform: scale(1.3);
 }
 
 
@@ -55,7 +57,7 @@ body {
 }
 
 .seat.selected {
-    background-color: antiquewhite;
+    background-color: rgb(180, 150, 110);
 }
 .row{
     display: flex;
@@ -67,4 +69,17 @@ body {
 .movie-list {
     margin: 10px 10px;
     margin-left: 240px;
+    margin-top: 15px;
+    
+}
+
+.info {
+    margin-left: 550px;
+    color: rgb(165, 162, 162);
+    display: flex;
+    gap: 7px 7px;
+}
+
+.space:hover{
+    background-color: rgb(145, 18, 18);
 }
