--- a/style.css
+++ b/style.css
@@ -44,13 +44,6 @@ body {
     align-items: center;
 }
 
-.seat:hover{
-    background: black;
-    cursor: pointer;
-    transform: scale(1.3);
-}
-
-
 .seat.reserved {
    background-color: rgb(253, 247, 247);
 
@@ -59,6 +52,12 @@ body {
 .seat.selected {
     background-color: rgb(94, 93, 93);
 }
+
+.seat:not(.reserved):hover {
+    cursor: pointer;
+    transform: scale(1.3);
+}
+
 .row{
     display: flex;
     justify-content: center;
@@ -78,6 +77,11 @@ body {
     color: rgb(165, 162, 162);
     display: flex;
     gap: 7px 7px;
+}
+
+
+p.text span {
+    color: #f6eb6f;
 }
 
 .space:hover{
