--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap');
 body { 
     background-image:url(./img/pexels-photo-7991380.jpg);
-    justify-content: center;
 }
 
 .typing-demo {
@@ -45,9 +44,9 @@ body {
     align-items: center;
 }
 
-.seat.reserved {
-   background-color: rgb(253, 247, 247);
-
+.seat.reserved:hover{
+    cursor: pointer;
+    transform: scale(1.3);
 }
 
 .seat.selected {
