--- a/style.css
+++ b/style.css
@@ -43,14 +43,16 @@ body {
     border-radius: 5px;
     align-items: center;
 }
-
+.seat.reserved{
+    background-color: white;
+}
 .seat.reserved:hover{
     cursor: pointer;
     transform: scale(1.3);
 }
 
 .seat.selected {
-    background-color: rgb(94, 93, 93);
+   background-color: rgb(93, 94, 94);
 }
 
 .seat:not(.reserved):hover {
