--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap');
+
+
 body { 
-    background-image:url(./img/pexels-photo-7991380.jpg);
+    background-color: rgba(230, 183, 183, 0.56);
 }
 
 .typing-demo {
-    margin-left: 100px;
-    width: 30ch;
+    margin-left: 280px;
+    width: 29ch;
     animation: typing 10s steps(22),blink .5s step-end infinite alternate;
     white-space:nowrap;
     overflow: hidden;
     border-right: 5px solid;
     font-family: Cinzel;
-    font-size: 50px;
+    font-size: 52px;
     color: rgb(116, 13, 13);
 }
 
@@ -33,7 +35,7 @@ body {
     width: 57%;
     margin: 20px 0;
     box-shadow: 0 4px 8px rgba(255, 255, 255, 0.7);
-    margin-left: 240px;
+    margin-left: 320px;
 }
 .seat {
     background-color:rgb(145, 18, 18);
@@ -46,11 +48,12 @@ body {
 .seat.reserved{
     background-color: white;
 }
+/*
 .seat.reserved:hover{
     cursor: pointer;
     transform: scale(1.3);
 }
-
+*/
 .seat.selected {
    background-color: rgb(93, 94, 94);
 }
@@ -76,21 +79,22 @@ body {
 
 .info {
     margin-left: 550px;
-    color: rgb(165, 162, 162);
+    color: rgb(108, 107, 107);
     display: flex;
     gap: 7px 7px;
 }
 
 
 p.text span {
-    color: #f6eb6f;
+    color: rgb(24, 24, 10);
+    font-size: 17px;
 }
 
-.space:hover{
+.space:not:hover{
     background-color: rgb(145, 18, 18);
 }
 
 .text{
     margin-left: 525px;
-    color: rgb(165, 162, 162); ;
+    color: rgb(83, 81, 81); ;
 }
